// (c) Copyright 2023 Helsing GmbH. All rights reserved.

syntax = "proto3";

import "buffrs/package.proto";

package buffrs.registry;

service Registry {
    // Publish a package
    rpc Publish(PublishRequest)
      returns (PublishResponse);

    // Download a package
    rpc Download(DownloadRequest)
      returns (DownloadResponse);

    // Get versions for a package
    rpc Versions(VersionsRequest)
        returns (VersionsResponse);
}

message PublishRequest {
    buffrs.package.Compressed package = 1;
}

message PublishResponse {}

message DownloadRequest {
    buffrs.package.Package package = 1;
}

message DownloadResponse {
    buffrs.package.Compressed package = 1;
}

message VersionsRequest {
    // package name
    string name = 1;
    /* `requirement` expects to follow the [`semver::VersionReq`] format
     * https://docs.rs/semver/latest/semver/struct.VersionReq.html
     * Examples: 
     * >=1.0.0
     * >=1.2.3, <1.8 */
    string requirement = 2;
}

message VersionsResponse {
    repeated string version = 1;
}
